# ai-agents-crewai-template

./: .env.example  Dockerfile  README.md  pyproject.toml
db/: chroma.sqlite3
src/ai_agents_crewai_template/: main.py
src/ai_agents_crewai_template/agents/: agents_definitions.py
src/ai_agents_crewai_template/crews/: crews_definitions.py
src/ai_agents_crewai_template/llm/: llm_definitions.py
src/ai_agents_crewai_template/tasks/: tasks_definitions.py
src/ai_agents_crewai_template/tools/: tools_definitions.py
